# SPDX-FileCopyrightText: 2020 Serokell <https://serokell.io/>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "deploy-rs"
version = "0.1.0"
authors = ["notgne2 <gen2@gen2.space>", "Serokell <hi@serokell.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["wrap_help", "derive"] }
color-eyre = "0.6.2"
flexi_logger = { version = "0.23.3", features = ["use_chrono_for_offset"] }
fork = "0.1"
futures-util = "0.3.25"
log = "0.4"
merge = "0.1.0"
notify = "5.0.0"
rnix = "0.10.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
signal-hook = "0.3"
thiserror = "1.0"
tokio = { version = "1.21.2", features = [
        "process",
        "macros",
        "sync",
        "rt-multi-thread",
        "fs",
        "time",
] }
toml = "0.7"
whoami = "1.2.3"
yn = "0.1"

[lib]
name = "deploy"
path = "src/lib.rs"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
